force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <label>Goal</label>
    <nameField>
        <displayFormat>G-{0000000}</displayFormat>
        <label>Goal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Goals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>