force-app/main/default/objects/Goal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>