force-app/main/default/objects/Goal__c/fields/Client_DOB__c.field-meta.xml
<CustomField>
    <fullName>Client_DOB__c</fullName>
    <label>Client DOB</label>
    <type>Date</type>
</CustomField>