force-app/main/default/objects/Goal__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access to Community Resources</fullName>
            </value>
            <value>
                <fullName>Child Care</fullName>
            </value>
            <value>
                <fullName>Child Development</fullName>
            </value>
            <value>
                <fullName>Drug and Alcohol</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Employment and Training</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Parenting</fullName>
            </value>
            <value>
                <fullName>Peer Support</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>