force-app/main/default/objects/Goal__c/fields/Goal_Template__c.field-meta.xml
<CustomField>
    <fullName>Goal_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Goal Template</label>
    <referenceTo>Goal_Template__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <type>Lookup</type>
</CustomField>