force-app/main/default/objects/Goal__c/fields/Goal_Type__c.field-meta.xml
<CustomField>
    <fullName>Goal_Type__c</fullName>
    <label>Goal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>