force-app/main/default/objects/Goal__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Goals</relationshipLabel>
    <relationshipName>Goals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>