force-app/main/default/objects/Goal__c/fields/Stuck_Reason__c.field-meta.xml
<CustomField>
    <fullName>Stuck_Reason__c</fullName>
    <label>Stuck Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barrier to Services</fullName>
            </value>
            <value>
                <fullName>Financial Constraints</fullName>
            </value>
            <value>
                <fullName>Time Constraints</fullName>
            </value>
            <value>
                <fullName>Change in Priorities</fullName>
            </value>
            <value>
                <fullName>Other Urgent Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>